@startuml
'https://plantuml.com/class-diagram

class Solution42 {

}

class FileHandler {
    + input[] : ArrayList<String>
    + fName : String[]
    + lName : String[]
    + salary : int[]

    + readFile() : void
    + readFileLine() : String
}

class StringProcessor {
    + static processInput(input : ArrayList<>, lName : String[], fName : String[], salary : int) : void
    + static getLineString(lName : String[], fName : String[], Salary : int, index : int) : String
}

Solution42 o--> FileHandler
Solution42 o--> StringProcessor
@enduml